--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content__btns">
           <a class="btn btn--regular btn--gradient btn--rounded" href="#"><span class="btn--gradient__text"><img src="img/whatsapp.svg"
                 alt="" class="hero-social-icon">Chamar no whatsapp</span></a><a class="btn btn--regular btn--underline btn--text"
-            href="#"> Ou <img src="img/messenger.svg" alt="" class="hero-social-icon">messenger</a>
+            href="https://www.messenger.com/t/394307227733613"> Ou <img src="img/messenger.svg" alt="" class="hero-social-icon">messenger</a>
         </div>
         <div class="fb-like" data-href="https://www.facebook.com/freitasbarber1977/" data-layout="button" data-action="like"
           data-size="large" data-show-faces="false" data-share="true"></div>
@@ -60,6 +60,10 @@
               <div class="hero-contact-title">Ter à Sex: 8h - 20h</div>
               <div class="hero-contact-subtitle">Sábado: 8h - 18h</div>
               <div class="hero-contact-live">ABERTO AGORA!</div>
+              <div id="open">ABERTO AGORA!</div>
+              <div id="closed">Fechado agora.</div>
+              <div id="mon-thurs">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sales: 8am - 8pm</div>
+              <div id="friday">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sales: 8am - 5:30pm</div>
             </div>
           </div>
           <div class="hero-contact"><img src="img/icon-location.svg" alt="" class="hero-contact-icon">
@@ -73,11 +77,12 @@
           </div>
           <div class="hero-contact"><img src="img/icon-contato..svg" alt="" class="hero-contact-icon">
             <div>
-              <div class="hero-contact-title">47 999774748</div>
+              <a href="tel:47996783270">
+                <div class="hero-contact-title">47 996783270</div>
+              </a>
               <div class="hero-contact-link"><a href="mailto:your@email.com?subject=Eventure" class="link-color">contato@freitasbarber.com.br</a></div>
-              <div class="hero-contact-live"><a href="https://facebook.com/freitasbarber" class="social-link-color"><img
-                    src="https://uploads-ssl.webflow.com/5a680087d2637e0001af7d80/5a6c4fcc7bd20a000183b8d8_facebook-icon-white.svg"
-                    alt="" class="hero-social-icon">Facebook</a></div>
+              <div class="hero-contact-live"><a href="https://www.facebook.com/freitasbarber1977/" class="social-link-color"><img
+                    src="img/fb-icon.svg" alt="" class="hero-social-icon">Facebook</a></div>
             </div>
           </div>
           </a>
@@ -91,114 +96,6 @@
           <div class="quote__cont__col">
             <div id="fullTable">Carregando...</div>
           </div>
-          <div class="quote__cont__col">
-            <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a> <a class="quote__card" href="#" target="_blank">
-              <span class="quote__img" style="background-image: var(--default-img);"></span>
-              <span class="quote__user">@usuariodeteste </span>
-              <span class="quote__text">Integer dignissim sed nulla posuere auctor. <span class="quote__text__anchor">@usuario</span>
-                <span class="quote__text__anchor">#tags</span>
-                <span class="quote__text__anchor">#tag</span></span>
-              <span class="quote__date">28 Out 2018</span>
-            </a>
-          </div>
         </div>
       </div>
     </div>
@@ -206,16 +103,15 @@
   </div>
   <script id="fullTable_template" type="text/html">
     {{#rows}}
-        <a class="quote__card" href="#" target="_blank">
+        <a class="quote__card" href="{{LinkDesseCard}}" target="_blank">
           <span class="quote__img" style="background-image: url('{{FotoUsuario}}'),var(--default-img);"></span>
-          <span class="quote__image"> <img class="quote__image--img" alt="Barbearia Freitas Barber" src="{{FotoBarbearia}}"></span>
+          <span class="quote__image"> <img class="quote__image--img"  src="{{FotoNoCard}}"></span>
           <span class="quote__user">{{NomeOuUsuario}}</span>
-          <span class="quote__text">{{Comentario}}<span class="quote__text__anchor">{{Tag1}}</span>
+          <span class="quote__text">{{Comentario}}<span class="quote__text__anchor">{{Tag}}</span>
             <span class="quote__text__anchor">{{Tag2}}</span>
           <span class="quote__date">{{Data}}</span>
-          <span class="quote__rating" rating="{{Rating}}">avaliacao</span>
         </a>
-        {{/rows}}
+    {{/rows}}
   </script>
   <div style="display: none">
     <input id="fullTableFilter" type="text" placeholder="filtrar por..."></input>
@@ -328,6 +224,37 @@
       this.init();
     }
     new AutoDivScroll("quotesScroll", "20", "1", "1");
+  </script>
+  <script>
+    var currentDate = new Date();
+    var currentMonth = currentDate.getMonth();
+    var currentDay = currentDate.getDay();
+    var currentHour = currentDate.getHours();
+    var currentMinute = currentDate.getMinutes();
+
+    function openClose() {
+      if (currentDay >= 1 && currentDay <= 5) { //if current day is Monday-Thursday
+        document.getElementById("friday").style.display = "none";
+        if (currentHour >= 8 && currentHour <= 21) { //They open on Monday - Thrusday at 8 am and close at 7 pm
+          document.getElementById("closed").style.display = "none";
+        } else {
+          document.getElementById("open").style.display = "none";
+        }
+      }
+      if (currentDay === 5) { // if current day is Friday
+        document.getElementById("mon-thurs").style.display = "none";
+        if (currentHour >= 8 && currentHour <= 17.5) { //They open on Friday at 8 am and close at 5: 30 pm 
+          document.getElementById("closed").style.display = "none";
+        } else {
+          document.getElementById("open").style.display = "none";
+        }
+      }
+      if (currentDay === 0 || currentDay === 6) { //Closed onSaturday and Sunday 
+        document.getElementById("open").style.display = "none";
+        document.getElementById("friday").style.display = "none";
+      }
+    };
+    setInterval(openClose(), 5000);
   </script>
 </body>
 
