REMOVED TARGET BLANK

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
   <script id="fullTable_template" type="text/html">
     {{#rows}} 
-      <a class="quote__card" href="{{LinkQuandoClicaNoCard}}" target="_blank">
+      <a class="quote__card" href="{{LinkQuandoClicaNoCard}}">
           <span class="quote__img" style="background-image: url('{{FotoUsuario}}'),var(--default-img);"></span>
           <span class="quote__image"> <img class="quote__image--img" src="{{ImagemParaOCard}}" ></span>
           <span class="quote__user">{{NomeOuUsuario}}</span>
