sporte para video

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     {{#rows}} 
       <a class="quote__card" href="{{LinkQuandoClicaNoCard}}">
           <span class="quote__img" style="background-image: url('{{FotoUsuario}}'),var(--default-img);"></span>
+          <div class="iframe"> {{incorporarVideoOuOutraCoisa}}</div>
           <span class="quote__image"> <img class="quote__image--img" src="{{ImagemParaOCard}}" ></span>
           <span class="quote__user">{{NomeOuUsuario}}</span>
           <span class="quote__text">{{TextoNoCard}}<span class="quote__text__anchor">{{Tag}}</span>
