--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
     {{#rows}} 
       <a class="quote__card" href="{{LinkQuandoClicaNoCard}}">
           <span class="quote__img" style="background-image: url('{{FotoUsuario}}'),var(--default-img);"></span>
-          <div class="iframe"> {{incorporarVideoOuOutraCoisa}}</div>
+          <div class="iframe {{exibeVideo}}"><iframe src="{{incorporarVideoOuOutraCoisa}}"
+  width="auto" height="{{alturaVideo}}" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+  allowFullScreen="true"></iframe> </div>
           <span class="quote__image"> <img class="quote__image--img" src="{{ImagemParaOCard}}" ></span>
           <span class="quote__user">{{NomeOuUsuario}}</span>
           <span class="quote__text">{{TextoNoCard}}<span class="quote__text__anchor">{{Tag}}</span>
