--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           Justo? Então encontrou! </p>
         <div class="content__btns">
           <a class="btn btn--regular btn--gradient btn--rounded" target="_blank"  href="https://wa.me/5547996783270"><span class="btn--gradient__text"><img src="img/whatsapp.svg"
-                alt="" class="hero-social-icon">Chamar no whatsapp</span></a><a class="btn btn--regular btn--underline btn--text" target="_blank" 
-            href="http://m.me/freitasbarber1977"> Ou <img src="img/messenger.svg" alt="" class="hero-social-icon">messenger</a>
+                alt="" class="hero-social-icon">Whatsapp</span></a><a class="btn btn--regular btn--underline btn--text" target="_blank" 
+            href="http://m.me/freitasbarber1977"> <img src="img/messenger.svg" alt="" class="hero-social-icon">Messenger</a>
         </div>
         <div class="fb-like" data-href="https://www.facebook.com/freitasbarber1977/" data-layout="button" data-action="like"
           data-size="large" data-show-faces="false" data-share="true"></div>
@@ -266,6 +266,43 @@
     };
     setInterval(openClose(), 5000);
   </script>
+  <div class="hero-contacts-wrapper only-mobile">
+      <div class="wrapper left side-paddings">
+        <div class="hero-contacts">
+          <div class="hero-contact">
+            <img src="img/icon-clock.svg" alt="" class="hero-contact-icon">
+            <div>
+              <div class="hero-contact-title">Terça à Sexta: 9h - 20h</div>
+              <div class="hero-contact-subtitle">Segunda: 13h - 20h</div>
+              <div class="hero-contact-subtitle">Sábado: 9h - 18h</div>
+              <div class="hero-contact-live" id="open">ABERTO AGORA!</div>
+              <div class="hero-contact-live" id="closed" style="display: none;">FECHADO AGORA</div>
+            </div>
+          </div>
+          <div class="hero-contact"><img src="img/icon-location.svg" alt="" class="hero-contact-icon">
+            <div>
+              <div class="hero-contact-title">Rua Tijucas, 140</div>
+              <div class="hero-contact-subtitle">Bairro NS da Paz, Piçarras SC</div>
+              <div class="hero-contact-subtitle">Próximo a Natubras </div>
+              <a target="_blank" href="https://www.google.com.br/maps/place/Barbearia+FREITAS+BARBER/@-26.7755232,-48.6727507,15z/data=!4m2!3m1!1s0x0:0xea12f3d326cb2c5?ved=2ahUKEwiWp7Kx8szeAhXJgZAKHaPnCVcQ_BIwMXoECAUQCA">
+                <div class="hero-contact-live">VER NO MAPA</div>
+              </a>
+            </div>
+          </div>
+          <div class="hero-contact"><img src="img/icon-contato..svg" alt="" class="hero-contact-icon">
+            <div>
+              <a href="tel:47996783270">
+                <div class="hero-contact-title" title="Ligar para Freitas Barber">(47) 99678-3270</div>
+              </a>
+              <div class="hero-contact-link"><a title="Enviar e-mail para Freitas Barber" href="mailto:marcosfreitas1977@hotmail.com?subject=Contato site" class="link-color">marcosfreitas1977@hotmail.com</a></div>
+              <div class="hero-contact-live"><a title="Ir para a Pagina do Freitas Barber no Facebook" href="https://www.facebook.com/freitasbarber1977/" class="social-link-color"><img src="img/fb-icon.svg" class="hero-social-icon">/freitasbarber1977</a></div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+      <div class="hero-contacts-bg"></div>
+    </div>
 </body>
 
 </html>
