--- a/index.html
+++ b/index.html
@@ -9,14 +9,103 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="Matheus Cezar - Impul.site" name="author">
-  <meta content="Descricao dos servicos Freitas Barber" name="description">
+<!-- Primary Meta Tags -->
+  <title>Barbearia Freitas Barber</title>
+
+<meta name="title" content="A Melhor Barbearia de Piçarras | Freitas Barber">
+<meta name="description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://freitasbarber.com.br">
+<meta property="og:title" content="Barbearia Freitas Barber">
+<meta property="og:description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
+<meta property="og:image" content="https://freitasbarber.com.br/img/frente.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://freitasbarber.com.br">
+<meta property="twitter:title" content="Barbearia Freitas Barber">
+<meta property="twitter:description" content="Rua Tijucas, 140 - Piçarras | 47 99678 3270">
+<meta property="twitter:image" content="https://freitasbarber.com.br/img/frente.jpg">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="theme-color" content="#ffffff">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
-  <title>A Melhor Barbearia de Piçarras | Freitas Barber</title>
+
+
+
     <script src='js/tabletop.js'></script>
+
+
+
   <script type="text/javascript" src='js/sheetsee.js'></script>
+
+
   <link rel="stylesheet" href="css/index.css">
   <link href="css/fonts.css" rel="stylesheet">
-
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "HairSalon",
+  "name": "Freitas Barber",
+  "image": "https://d33wubrfki0l68.cloudfront.net/img/827b73cee92e737d75ae58c02df4923f986ec25e/logo-white.png",
+  "@id": "",
+  "url": "https://www.freitasbarber.com.br",
+  "telephone": "47 99678 3270",
+  "priceRange": "2-30",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Rua Tijucas, 140",
+    "addressLocality": "Picarras",
+    "postalCode": "88380-000",
+    "addressCountry": "BR"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": -26.7742947,
+    "longitude": -48.6790704
+  },
+  "openingHoursSpecification": [{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday"
+    ],
+    "opens": "",
+    "closes": ""
+  },{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": "Monday",
+    "opens": "13:00",
+    "closes": "20:00"
+  },{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday"
+    ],
+    "opens": "09:00",
+    "closes": "20:00"
+  },{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": "Saturday",
+    "opens": "09:00",
+    "closes": "18:00"
+  }],
+  "sameAs": "https://www.facebook.com/freitasbarber1977/"
+}
+</script>
 </head>
 
 <body class="cont fbr fbr_index" ontouchstart="">
@@ -41,8 +130,7 @@
       </div>
       <div class="content__cont">
         <h1 class="content__header"> A sua melhor imagem<br>começa aqui. </h1>
-        <p class="content__text"> Pronto para lidar com suas maiores expectativas. Procura excelente qualidade? Preço
-          Justo? Então encontrou! </p>
+        <p class="content__text">Alta qualidade em cortes de cabelo Masculino e Infantil. Cortes degrade, militar e social, cortes com risco e desenhos artisticos.</p>
         <div class="content__btns">
           <a class="btn btn--regular btn--gradient btn--rounded" target="_blank"  href="https://wa.me/5547996783270"><span class="btn--gradient__text"><img src="img/whatsapp.svg"
                 alt="" class="hero-social-icon">Whatsapp</span></a><a class="btn btn--regular btn--underline btn--text" target="_blank" 
