--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
   <link href="favicon.ico" rel="icon" type="image/x-icon">
 
 
+<link rel="manifest" href="manifest.json">
+
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="application-name" content="Freitas Barber">
+<meta name="apple-mobile-web-app-title" content="Freitas Barber">
+<meta name="theme-color" content="#000000">
+<meta name="msapplication-navbutton-color" content="#000000">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="msapplication-starturl" content="/">
+
 
     <script src='js/tabletop.js'></script>
 
@@ -129,8 +140,9 @@
         </a>
       </div>
       <div class="content__cont">
-        <h1 class="content__header"> A sua melhor imagem<br>começa aqui. </h1>
-        <p class="content__text">Alta qualidade em cortes de cabelo Masculino e Infantil. Cortes degrade, militar e social, cortes com risco e desenhos artisticos.</p>
+        <h1 class="content__header"> A sua melhor imagem<br>começa aqui! </h1>
+        <p class="content__text">Alta qualidade em cortes de cabelo Masculino e Infantil. 
+        Cortes degrade, militar e social clássico, cortes com risco e desenhos artísticos personalizados. <br> A combinação perfeita entre técnicas modernas e habilidades de artesão!</p>
         <div class="content__btns">
           <a class="btn btn--regular btn--gradient btn--rounded" target="_blank"  href="https://wa.me/5547996783270"><span class="btn--gradient__text"><img src="img/whatsapp.svg"
                 alt="" class="hero-social-icon">Whatsapp</span></a><a class="btn btn--regular btn--underline btn--text" target="_blank" 
