margem texto no mobile

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
       </div>
       <div class="content__cont">
         <h1 class="content__header"> A sua melhor imagem<br>começa aqui! </h1>
-        <p class="content__text">Alta qualidade em cortes de cabelo Masculino e Infantil. 
-        Cortes degrade, militar e social clássico, cortes com risco e desenhos artísticos personalizados. <br> A combinação perfeita entre técnicas modernas e habilidades de artesão!</p>
+        <p class="content__text">Alta qualidade em cortes de cabelo Masculino e Infantil. <br>
+        Cortes degradê, militar e tradicionais, cortes com risco e desenhos artísticos personalizados. <br> A combinação perfeita entre técnicas modernas de Hair stylist e habilidades de artesão!</p>
         <div class="content__btns">
           <a class="btn btn--regular btn--gradient btn--rounded" target="_blank"  href="https://wa.me/5547996783270"><span class="btn--gradient__text"><img src="img/whatsapp.svg"
                 alt="" class="hero-social-icon">Whatsapp</span></a><a class="btn btn--regular btn--underline btn--text" target="_blank" 
